# livedisk-forensic

./: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: bar.rs  drive_layout.rs  lib.rs  linux.rs  macos.rs  sysfs.rs  windows.rs
docs/: privacy.md  terms.md
forensic/: Cargo.toml  README.md
forensic/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_drive_layout.rs  fuzz_mounts.rs
